Fixes on toast not coming up on mobile and sticky header

--- a/public/assets/scss/bootstrap/_nav.scss
+++ b/public/assets/scss/bootstrap/_nav.scss
@@ -54,7 +54,7 @@
   .nav-link.active,
   .nav-item.show .nav-link {
     color: $nav-tabs-link-active-color;
-    background-color: $nav-tabs-link-active-bg;
+    // background-color: $nav-tabs-link-active-bg;
     border-color: $nav-tabs-link-active-border-color;
   }
 
